--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+
   flutter_lints: ^1.0.0
+  # google sign in
+  firebase_auth: ^1.4.1
+  firebase_core: ^1.2.0
+  google_sign_in: ^5.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
